--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,26 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+### Gradle ###
+.gradle/
+build/
+
+### Logs ###
+logs/
+*.log
+
+### OS Files ###
+.DS_Store
+Thumbs.db
+
+### Spring Boot ###
+# Local environment properties
+application-*.yml
+application-*.properties
+
+# Temp files
+tmp/
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
