--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@ spring.application.name=smartboard
 spring.security.user.name=user
 spring.security.user.password=1234
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=spotfire_server
-spring.datasource.password=spotfire_server
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#?? JPA ??? ??. (DB ?? X)
+#spring.jpa.hibernate.ddl-auto=update
+# ? ?? ??? ??? Flyway?!
+spring.jpa.hibernate.ddl-auto=none   
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
