세팅 다시 했음 flyway, docker 등

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=smartboard
 
+spring.profiles.active=home
+
 spring.security.user.name=user
 spring.security.user.password=1234
 
@@ -10,5 +12,11 @@ spring.security.user.password=1234
 spring.jpa.hibernate.ddl-auto=none   
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Flyway(??)
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+
 
 
